# StatisticalAnalysis

./: pyproject.toml
src/data/: conversion.parquet  dataset creator.ipynb
src/statisticaltesting/: StatisticalTesting.ipynb
