[project]
name = "statisticaltesting"
version = "0.1.0"
description = ""
authors = [
    {name = "Frissie",email = "R.Blanckaert@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "faker (>=37.5.3,<38.0.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "scipy (>=1.16.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "statisticaltesting", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
